--- a/weeklong-starter.ipynb
+++ b/weeklong-starter.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 47,
       "metadata": {
         "id": "uHE7HhLZ6utW"
       },
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 48,
       "metadata": {
         "id": "-OKVxe4-JaZN"
       },
@@ -67,13 +67,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 49,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "krj8ZRd26nLj",
-        "outputId": "48772d32-c12d-4238-8927-25aca13bb150"
+        "outputId": "1b0dc471-1ec7-455d-a563-d9a263a0a963"
       },
       "outputs": [
         {
@@ -151,13 +151,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 50,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1qj0aqsqJaZN",
-        "outputId": "b64db02e-7f3f-435f-9350-aa77d060847e"
+        "outputId": "65bba4f3-b46f-40ad-ef3d-9b23bcc95aa5"
       },
       "outputs": [
         {
@@ -206,13 +206,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 51,
       "metadata": {
         "id": "GsVQWpuGJaZO",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8507aed4-63b3-44fa-9c54-eeaaed3a112d"
+        "outputId": "78a61669-ba8b-42e2-f96a-d2fcfb7e758d"
       },
       "outputs": [
         {
@@ -310,13 +310,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 52,
       "metadata": {
         "id": "mqke_CvYJaZO",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cdefb941-3caa-482e-8f02-f6dd6acb6c19"
+        "outputId": "a28d9d00-0e5c-4e4e-c198-3c8765e948f9"
       },
       "outputs": [
         {
@@ -330,8 +330,7 @@
       ],
       "source": [
         "# Initialize multi-output regression models\n",
-        "# DecisionTreeRegressor and RandomForestRegressor support multi-output natively\n",
-        "dt_regressor = DecisionTreeRegressor(random_state=42)\n",
+        "# RandomForestRegressor support multi-output natively\n",
         "rf_regressor = RandomForestRegressor(random_state=42)\n",
         "\n",
         "# Ridge and KNeighborsRegressor do not natively support multi-output, so we wrap them\n",
@@ -340,7 +339,6 @@
         "\n",
         "\n",
         "models = {\n",
-        "    \"Decision Tree Regressor\": dt_regressor,\n",
         "    \"Random Forest Regressor\": rf_regressor,\n",
         "    \"Ridge Regressor\": ridge_regressor,\n",
         "    \"KNeighbors Regressor\": knn_regressor\n",
@@ -394,13 +392,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "I used the Poke data dataset. I had to impute for missing values, and then used onehotencoder for the catagorical things. I chose Randomforest, Ridge, and KNeighborsRegressor. I used R2 to evaluate them. After testing a bunch, I decided to use Ridge as it gave the best non-tuned output, and then I tuned it. I think it work decently well."
+      ],
+      "metadata": {
+        "id": "IxzPE7ir9WK_"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "46af8dc2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d442479d-9581-40de-fc06-77621e82bd9f"
+        "outputId": "e055b9fe-d77d-4ac1-ba94-971b9624f81f"
       },
       "source": [
         "# Evaluate the models using R-squared as the metric\n",
@@ -420,7 +427,7 @@
         "# Print the results\n",
         "print(f\"\\nModel Evaluation Results: {r2}\")\n"
       ],
-      "execution_count": 45,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
@@ -450,7 +457,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 341
         },
-        "outputId": "bd3021bc-f01d-459b-c071-c4b8f699665d"
+        "outputId": "9aa790ee-3c03-4f66-b74c-a7147ea35c7a"
       },
       "source": [
         "# Make predictions on the test set\n",
@@ -468,7 +475,7 @@
         "predictions_df = pd.DataFrame(predictions, columns=target_test.columns, index=target_test.index)\n",
         "display(predictions_df.head(n_samples_to_show))"
       ],
-      "execution_count": 46,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
@@ -508,7 +515,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-caebfb14-830d-4d6a-8855-c197e324709c\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-692592ab-f343-4dec-a5dc-7675ef7d0a04\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -617,7 +624,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-caebfb14-830d-4d6a-8855-c197e324709c')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-692592ab-f343-4dec-a5dc-7675ef7d0a04')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -669,12 +676,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-caebfb14-830d-4d6a-8855-c197e324709c button.colab-df-convert');\n",
+              "        document.querySelector('#df-692592ab-f343-4dec-a5dc-7675ef7d0a04 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-caebfb14-830d-4d6a-8855-c197e324709c');\n",
+              "        const element = document.querySelector('#df-692592ab-f343-4dec-a5dc-7675ef7d0a04');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -694,8 +701,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-d17922a2-67b3-4fa1-acfe-320792cc02fc\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d17922a2-67b3-4fa1-acfe-320792cc02fc')\"\n",
+              "    <div id=\"df-f6de2041-b2ba-4fb6-b1f3-1abfc8d2bdce\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f6de2041-b2ba-4fb6-b1f3-1abfc8d2bdce')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -814,7 +821,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-d17922a2-67b3-4fa1-acfe-320792cc02fc button');\n",
+              "            document.querySelector('#df-f6de2041-b2ba-4fb6-b1f3-1abfc8d2bdce button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -870,7 +877,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-91b3a4b1-c025-43cb-a1e7-66e91428eda6\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-c25d63ca-4a4f-4fe3-b505-478915fbb4dd\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -979,7 +986,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-91b3a4b1-c025-43cb-a1e7-66e91428eda6')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c25d63ca-4a4f-4fe3-b505-478915fbb4dd')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1031,12 +1038,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-91b3a4b1-c025-43cb-a1e7-66e91428eda6 button.colab-df-convert');\n",
+              "        document.querySelector('#df-c25d63ca-4a4f-4fe3-b505-478915fbb4dd button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-91b3a4b1-c025-43cb-a1e7-66e91428eda6');\n",
+              "        const element = document.querySelector('#df-c25d63ca-4a4f-4fe3-b505-478915fbb4dd');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1056,8 +1063,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-94023238-a007-4b43-8557-992116805b9d\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-94023238-a007-4b43-8557-992116805b9d')\"\n",
+              "    <div id=\"df-a7ffcaca-ace3-4fbd-bb00-3caa1e51bb48\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a7ffcaca-ace3-4fbd-bb00-3caa1e51bb48')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1176,7 +1183,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-94023238-a007-4b43-8557-992116805b9d button');\n",
+              "            document.querySelector('#df-a7ffcaca-ace3-4fbd-bb00-3caa1e51bb48 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
