--- a/weeklong-starter.ipynb
+++ b/weeklong-starter.ipynb
@@ -394,7 +394,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "I used the Poke data dataset. I had to impute for missing values, and then used onehotencoder for the catagorical things. I chose Randomforest, Ridge, and KNeighborsRegressor. I used R2 to evaluate them. After testing a bunch, I decided to use Ridge as it gave the best non-tuned output, and then I tuned it. I think it work decently well."
+        "I used the Poke data dataset. I had to impute for missing values, and then used onehotencoder for the catagorical things. I dropped the columns that I thought wouldn't really be affecting combat matchups, like breeding times. I chose Randomforest, Ridge, and KNeighborsRegressor. I used R2 to evaluate them. After testing a bunch, I decided to use Ridge as it gave the best non-tuned output, and then I tuned it. I think it work decently well."
       ],
       "metadata": {
         "id": "IxzPE7ir9WK_"
